--- a/cd7/index.html
+++ b/cd7/index.html
@@ -23,24 +23,22 @@
 					<a id="playVideo" href="https://gamakloud.com/p6xEv"><img src="images/btn_video-a.png" alt="GB9"  onmouseover="this.src='images/btn_video-h.png'" 	onmouseout="this.src='images/btn_video-a.png'"></a>
 				</div>
 				<div id ='video_info' style="display:none" >
-				<source src="images/video.mp4" type="video/mp4">
+				<!--<source src="images/video.mp4" type="video/mp4">-->
 				</div>
 			</div>
 			
 	  			<div class="banner_bg">
 					<div class="banner">
 						<div class="banner_bgin" id="bigger">
-							<li><a href="https://gamakloud.com/age3o"><img src="images/banners/0.jpg" alt="chokdee777"></a></li>
-							<li><a href="https://gamakloud.com/L3Er4"><img src="images/banners/1.jpg" alt="chokdee777"></a></li>
-							<li><a href="https://gamakloud.com/pmiAh"><img src="images/banners/2.jpg" alt="chokdee777"></a></li>
-							<!-- <li><a href="https://www.chokdee777.com/?pid=GOAD01"><img src="images/banners/3.jpg" alt="chokdee777"></a></li> -->
-							<li><a href="https://gamakloud.com/1mbeS"><img src="images/banners/4.jpg" alt="chokdee777"></a></li>		  				</div>
-						<div class="banner_bgins">
-							<li><a href="https://gamakloud.com/age3o"><img src="images/banners/0_s.jpg" alt="chokdee777"></a></li>
-							<li><a href="https://gamakloud.com/L3Er4"><img src="images/banners/1_s.jpg" alt="chokdee777"></a></li>
-							<li><a href="https://gamakloud.com/pmiAh"><img src="images/banners/2_s.jpg" alt="chokdee777"></a></li>
-							<!-- <li><a href="https://www.chokdee777.com/?pid=GOAD01"><img src="images/banners/3_s.jpg" alt="chokdee777"></a></li> -->
+							<li><a href="https://gamakloud.com/age3o"><img src="images/banners/1_s.jpg" alt="chokdee777"></a></li>
+							<li><a href="https://gamakloud.com/L3Er4"><img src="images/banners/2_s.jpg" alt="chokdee777"></a></li>
+							<li><a href="https://gamakloud.com/pmiAh"><img src="images/banners/3_s.jpg" alt="chokdee777"></a></li>
 							<li><a href="https://gamakloud.com/1mbeS"><img src="images/banners/4_s.jpg" alt="chokdee777"></a></li>		  				</div>
+						<div class="banner_bgins">
+							<li><a href="https://gamakloud.com/age3o"><img src="images/banners/1.jpg" alt="chokdee777"></a></li>
+							<li><a href="https://gamakloud.com/L3Er4"><img src="images/banners/2.jpg" alt="chokdee777"></a></li>
+							<li><a href="https://gamakloud.com/pmiAh"><img src="images/banners/3.jpg" alt="chokdee777"></a></li>
+							<li><a href="https://gamakloud.com/1mbeS"><img src="images/banners/4.jpg" alt="chokdee777"></a></li>		  				</div>
 					</div>
 				</div>
 			<div class="footer"><p>Copyright © 2020 SIAN99 CO. All rights reserved.</p></div>
