change link of banner

--- a/cd7/index.html
+++ b/cd7/index.html
@@ -20,7 +20,7 @@
 		<div class="bg-s">
 			<div class="title_bg">
 				<div class="btn_video">
-					<a id="playVideo" href="https://gamakloud.com/p6xEv"><img src="images/btn_video-a.png" alt="GB9"  onmouseover="this.src='images/btn_video-h.png'" 	onmouseout="this.src='images/btn_video-a.png'"></a>
+					<a id="playVideo" href="https://gamakloud.com/chokdee7/Chere"><img src="images/btn_video-a.png" alt="GB9"  onmouseover="this.src='images/btn_video-h.png'" 	onmouseout="this.src='images/btn_video-a.png'"></a>
 				</div>
 				<div id ='video_info' style="display:none" >
 				<!--<source src="images/video.mp4" type="video/mp4">-->
@@ -30,15 +30,15 @@
 	  			<div class="banner_bg">
 					<div class="banner">
 						<div class="banner_bgin" id="bigger">
-							<li><a href="https://gamakloud.com/age3o"><img src="images/banners/1_s.jpg" alt="chokdee777"></a></li>
-							<li><a href="https://gamakloud.com/L3Er4"><img src="images/banners/2_s.jpg" alt="chokdee777"></a></li>
-							<li><a href="https://gamakloud.com/pmiAh"><img src="images/banners/3_s.jpg" alt="chokdee777"></a></li>
-							<li><a href="https://gamakloud.com/1mbeS"><img src="images/banners/4_s.jpg" alt="chokdee777"></a></li>		  				</div>
+							<li><a href="https://gamakloud.com/chokdee7/give300"><img src="images/banners/1_s.jpg" alt="chokdee777"></a></li>
+							<li><a href="https://gamakloud.com/chokdee7/give200"><img src="images/banners/2_s.jpg" alt="chokdee777"></a></li>
+							<li><a href="https://gamakloud.com/chokdee7/give150%"><img src="images/banners/3_s.jpg" alt="chokdee777"></a></li>
+							<li><a href="https://gamakloud.com/chokdee7/give50%"><img src="images/banners/4_s.jpg" alt="chokdee777"></a></li>		  				</div>
 						<div class="banner_bgins">
-							<li><a href="https://gamakloud.com/age3o"><img src="images/banners/1.jpg" alt="chokdee777"></a></li>
-							<li><a href="https://gamakloud.com/L3Er4"><img src="images/banners/2.jpg" alt="chokdee777"></a></li>
-							<li><a href="https://gamakloud.com/pmiAh"><img src="images/banners/3.jpg" alt="chokdee777"></a></li>
-							<li><a href="https://gamakloud.com/1mbeS"><img src="images/banners/4.jpg" alt="chokdee777"></a></li>		  				</div>
+							<li><a href="https://gamakloud.com/chokdee7/give300"><img src="images/banners/1.jpg" alt="chokdee777"></a></li>
+							<li><a href="https://gamakloud.com/chokdee7/give200"><img src="images/banners/2.jpg" alt="chokdee777"></a></li>
+							<li><a href="https://gamakloud.com/chokdee7/give150%"><img src="images/banners/3.jpg" alt="chokdee777"></a></li>
+							<li><a href="https://gamakloud.com/chokdee7/give50%"><img src="images/banners/4.jpg" alt="chokdee777"></a></li>		  				</div>
 					</div>
 				</div>
 			<div class="footer"><p>Copyright © 2020 SIAN99 CO. All rights reserved.</p></div>
